# livox_detection_ros

./: .gitignore  CMakeLists.txt  README.md  build_pkg.sh
cloud2voxel/: CMakeLists.txt  package.xml
cloud2voxel/include/: cloud2voxel.h
cloud2voxel/src/: cloud2voxel.cpp  main.cpp
launch/: livox_det.launch
livox_detection/: CMakeLists.txt  livox_rosdetection.py  livox_rosdetection_new.py  msgConverter.py  package.xml  solve_cudnn_error.py
livox_detection/config/: config.py  config_2.py
livox_detection/networks/: model.py
livox_detection/utils/lib_cpp/: CMakeLists.txt  lib_cpp_new.cpp
livox_object_filter/: CMakeLists.txt  package.xml
livox_object_filter/include/livox_object_filter/: object_filter.h
livox_object_filter/launch/: livox_nuscenes_det.launch  livox_object_filter.launch  livox_output_nuscenes.launch
livox_object_filter/src/: main.cpp  object_filter.cpp
motion_compensation/: CMakeLists.txt  package.xml
motion_compensation/include/: point_container.h
motion_compensation/include/motion_compensation/: motion_compensation.h
motion_compensation/launch/: motion_compensation.launch
motion_compensation/src/: main.cpp  motion_compensation.cpp
