<?xml version="1.0"?>
<package format="2">
    <name>livox_detection</name>
    <version>0.0.0</version>
    <description>The livox_detection package</description>
    <maintainer email="ChiaJuiHu@itri.org.tw">ChiaJuiHu</maintainer>
    <license>ITRI</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>itri_msgs</build_depend>
    <build_depend>kdtree</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>itri_msgs</exec_depend>
    <exec_depend>kdtree</exec_depend>

</package>
