<?xml version="1.0"?>
<package format="2">
  <name>motion_compensation</name>
  <version>0.0.0</version>
  <description>The motion_compensation package</description>
  <maintainer email="c1231010@gmail.com">Ruo-Tsz,Ho</maintainer>
  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

</package>
